--- a/portfolio.html
+++ b/portfolio.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
+    <!-- <link rel="stylesheet" href="css/style.css"> -->
     <link rel="stylesheet" href="css/modern-normalize.css">
     <link rel="stylesheet" href="css/main.min.css">
     <title>Portfolio</title>
@@ -160,62 +160,62 @@
                 </ul> 
         </div>      
     </main>
-    <footer class="footer">
-        <div class="container footer-container">
-            <div class="adress-container">
-                <a href="" class="logo footer__logo">Web<span class="logo logo--light">Studio</span>
-                </a>
-                <address class="footer-adress">
-                    <ul class="footer-adress-list">
-                        <li class="footer-adress-list__item">
-                            <p class="footer-adress-list__text">г. Киев, пр-т Леси Украинки, 26</p>
+        <footer class="footer">
+            <div class="container footer-container">
+                <div class="adress-container">
+                    <a href="" class="logo footer__logo">Web<span class="logo logo--light">Studio</span>
+                    </a>
+                    <address class="footer-adress">
+                        <ul class="footer-adress-list">
+                            <li class="footer-adress-list__item">
+                                <p class="footer-adress-list__text">г. Киев, пр-т Леси Украинки, 26</p>
+                            </li>
+                            <li class="footer-adress-list__item">
+                                <a href="mailto:info@example.com" class="footer-adress-list__link">info@example.com</a>
+                            </li>
+                            <li class="footer-adress-list__item">
+                                <a href="tel:+380991111111" class="footer-adress-list__link">+38 099 111 11 11</a>
+                            </li>
+                        </ul>
+                    </address>
+                </div>
+                <div class="footer-contacts">
+                    <h3 class="footer-contacts__head">присоединяйтесь</h3>
+                    <ul class="footer-contacts-list">
+                        <li class="footer-contacts-list__item">
+                            <a href=""><svg class="footer-contacts__icon">
+                                    <use href="./images/icons.svg#icon-footerinstagram"></use>
+                                </svg></a>
                         </li>
-                        <li class="footer-adress-list__item">
-                            <a href="mailto:info@example.com" class="footer-adress-list__link">info@example.com</a>
+                        <li class="footer-contacts-list__item">
+                            <a href=""><svg class="footer-contacts__icon">
+                                    <use href="./images/icons.svg#icon-footertwitter"></use>
+                                </svg></a>
                         </li>
-                        <li class="footer-adress-list__item">
-                            <a href="tel:+380991111111" class="footer-adress-list__link">+38 099 111 11 11</a>
+                        <li class="footer-contacts-list__item">
+                            <a href=""><svg class="footer-contacts__icon">
+                                    <use href="./images/icons.svg#icon-footerfacebook"></use>
+                                </svg></a>
+                        </li>
+                        <li class="footer-contacts-list__item">
+                            <a href=""><svg class="footer-contacts__icon">
+                                    <use href="./images/icons.svg#icon-footerlinkedin"></use>
+                                </svg></a>
                         </li>
                     </ul>
-                </address>
+                </div>
+                <div class="phonetic-div">
+                    <label for="text" class="phonetic__text">Подпишитесь на рассылку</label>
+                    <form class="phonetic">
+                        <input type="text" id="text" placeholder="E-mail" class="phonetic__input">
+                        <button type="submit" class="phonetic__btn">Подписаться
+                            <svg class="phonetic__icon">
+                                <use href="./images/icons.svg#icon-telegram"></use>
+                            </svg>
+                        </button>
+                    </form>
+                </div>
             </div>
-            <div class="footer-contacts">
-                <h3 class="footer-contacts__head">присоединяйтесь</h3>
-                <ul class="footer-contacts-list">
-                    <li class="footer-contacts-list__item">
-                        <a href=""><svg class="footer-contacts__icon">
-                                <use href="./images/icons.svg#icon-footerinstagram"></use>
-                            </svg></a>
-                    </li>
-                    <li class="footer-contacts-list__item">
-                        <a href=""><svg class="footer-contacts__icon">
-                                <use href="./images/icons.svg#icon-footertwitter"></use>
-                            </svg></a>
-                    </li>
-                    <li class="footer-contacts-list__item">
-                        <a href=""><svg class="footer-contacts__icon">
-                                <use href="./images/icons.svg#icon-footerfacebook"></use>
-                            </svg></a>
-                    </li>
-                    <li class="footer-contacts-list__item">
-                        <a href=""><svg class="footer-contacts__icon">
-                                <use href="./images/icons.svg#icon-footerlinkedin"></use>
-                            </svg></a>
-                    </li>
-                </ul>
-            </div>
-            <div class="phonetic-div">
-                <label for="text" class="phonetic__text">Подпишитесь на рассылку</label>
-                <form class="phonetic">
-                    <input type="text" id="text" placeholder="E-mail" class="phonetic__input">
-                    <button type="submit" class="phonetic__btn">Подписаться
-                        <svg class="phonetic__icon">
-                            <use href="./images/icons.svg#icon-telegram"></use>
-                        </svg>
-                    </button>
-                </form>
-            </div>
-        </div>
-    </footer>
+        </footer>
 </body>
 </html>
