--- a/index.html
+++ b/index.html
@@ -234,31 +234,31 @@
                 <ul class="clients-list">
                     <li class="clients-list__item">
                         <a href=""><svg class="clients-list__icon">
-                            <use href="/images/icons.svg#icon-client1"><use></svg></a>
+                            <use href="./images/icons.svg#icon-client1"><use></svg></a>
                     </li>
                     <li class="clients-list__item">
                         <a href=""><svg class="clients-list__icon">
-                                <use href="/images/icons.svg#icon-client2"></use>
+                                <use href="./images/icons.svg#icon-client2"></use>
                             </svg></a>
                     </li>
                     <li class="clients-list__item">
                         <a href=""><svg class="clients-list__icon">
-                                <use href="/images/icons.svg#icon-client3"></use>
+                                <use href="./images/icons.svg#icon-client3"></use>
                             </svg></a>
                     </li>
                     <li class="clients-list__item">
                         <a href=""><svg class="clients-list__icon">
-                                <use href="/images/icons.svg#icon-client4"></use>
+                                <use href="./images/icons.svg#icon-client4"></use>
                             </svg></a>
                     </li>
                     <li class="clients-list__item">
                         <a href=""><svg class="clients-list__icon">
-                                <use href="/images/icons.svg#icon-client5"></use>
+                                <use href="./images/icons.svg#icon-client5"></use>
                             </svg></a>
                     </li>
                     <li class="clients-list__item">
                         <a href=""><svg class="clients-list__icon">
-                                <use href="/images/icons.svg#icon-client6"></use>
+                                <use href="./images/icons.svg#icon-client6"></use>
                             </svg></a>
                     </li>
                 </ul>
